rust/katsuobushi-controller/src/project/snapshots/katsuctl__project__board__tests__golden_after_archive_into_populated_archive.snap
---
source: rust/katsuobushi-controller/src/project/board.rs
expression: b.to_text()
---
---

kanban-plugin: basic

---

## To-do


## In Progress


## Needs Review


## Ready


***

## Archive

- [x] [[dddddd]]
- [x] [[ff09ab]]

%% kanban:settings
```
{"kanban-plugin":"basic"}
```
%%
