rust/katsuobushi-controller/src/project/snapshots/katsuctl__project__board__tests__golden_after_move_to_lane.snap
---
source: rust/katsuobushi-controller/src/project/board.rs
expression: b.to_text()
---
---
kanban-plugin: basic
---

## To-do

- [ ] [[1a2b3c]]

## In Progress

- [ ] [[ff09ab]]
- [ ] [[a3f7b2]]

## Needs Review

## Ready

%% kanban:settings

```
{"kanban-plugin":"basic"}
```

%%
