rust/katsuobushi-controller/src/project/snapshots/katsuctl__project__board__tests__golden_initial_board.snap
---
source: rust/katsuobushi-controller/src/project/board.rs
expression: "crate::project::layout::initial_board()"
---
---
kanban-plugin: basic
---

## To-do

## In Progress

## Needs Review

## Ready

%% kanban:settings

```
{"kanban-plugin":"basic","metadata-keys":[{"containsMarkdown":false,"label":"","metadataKey":"title","shouldHideLabel":true},{"containsMarkdown":false,"label":"type","metadataKey":"type","shouldHideLabel":false},{"containsMarkdown":false,"label":"blocked by","metadataKey":"blocked_by","shouldHideLabel":false},{"containsMarkdown":false,"label":"labels","metadataKey":"labels","shouldHideLabel":false}]}
```

%%
